--- a/src/blocks/modules/ads-slider-user/ads-slider-user.scss
+++ b/src/blocks/modules/ads-slider-user/ads-slider-user.scss
@@ -2,7 +2,7 @@
     &-slider {
         margin-bottom: 24px;
         position: relative;
-        @media (max-width: 576px) {
+        @media (max-width: $media-sm) {
             .swiper-container {
                 margin-left: -16px;
                 margin-right: -16px;
@@ -26,7 +26,7 @@
             top: 50%;
             transform: translateY(-50%);
             opacity: 0;
-            @media (max-width: 1023px) {
+            @media (max-width: $media-lg) {
                 display: none;
             }
 
@@ -56,7 +56,7 @@
             font-size: rem(14);
             line-height: 1.43;
             text-align: center;
-            @media (max-width: 1023px) {
+            @media (max-width: $media-lg) {
                 display: none;
             }
         }
@@ -67,7 +67,7 @@
         line-height: 1.5;
         color: $text-black;
         margin-bottom: 48px;
-        @media (max-width: 1023px) {
+        @media (max-width: $media-lg) {
             font-size: rem(18);
             line-height: 1.56;
             margin-bottom: 24px;
@@ -88,7 +88,7 @@
                 background-color: #d8d8d8;
                 padding-bottom: 75%;
 
-                @media (max-width: 1023px) {
+                @media (max-width: $media-lg) {
                     width: 382px;
                     padding-bottom: 57%;
                 }
@@ -105,7 +105,7 @@
                     width: 100%;
                     height: 61px;
                     background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7));
-                    @media (max-width: 1023px) {
+                    @media (max-width: $media-lg) {
                         display: none;
                     }
                 }
@@ -118,7 +118,7 @@
                     width: 100%;
                     height: 82px;
                     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7));
-                    @media (max-width: 1023px) {
+                    @media (max-width: $media-lg) {
                         display: none;
                     }
                 }
@@ -152,7 +152,7 @@
         right: 8px;
         bottom: 8px;
         left: 8px;
-        @media (max-width: 1023px) {
+        @media (max-width: $media-lg) {
             display: none;
         }
 
@@ -202,7 +202,7 @@
         background-image: url('../img/icons/icon__zoom.svg');
         opacity: 0;
         padding: 0;
-        @media (max-width: 1023px) {
+        @media (max-width: $media-lg) {
             display: none;
         }
     }
