--- a/src/blocks/modules/comments/comments.scss
+++ b/src/blocks/modules/comments/comments.scss
@@ -4,7 +4,7 @@
         padding-top: 13px;
         padding-bottom: 13px;
         font-weight: $font-weight-light;
-        @media (max-width: 767px) {
+        @media (max-width: $media-md) {
             width: 100%;
             padding-top: 17px;
             padding-bottom: 17px;
