--- a/src/blocks/modules/document-list/document-list.scss
+++ b/src/blocks/modules/document-list/document-list.scss
@@ -20,7 +20,7 @@
             border-bottom: 0;
             padding-bottom: 16px;
         }
-        @media (max-width: 767px) {
+        @media (max-width: $media-md) {
             padding-left: 0;
             padding-right: 0;
         }
@@ -46,7 +46,7 @@
             z-index: 2;
             margin: -1px -16px 0;
             padding: 17px 64px 16px 16px;
-            @media (max-width: 767px) {
+            @media (max-width: $media-md) {
                 margin: 0 0 0;
                 box-shadow: none;
                 padding: 16px 0 15px 0;
@@ -59,7 +59,7 @@
 
             &:after {
                 display: block;
-                @media (max-width: 767px) {
+                @media (max-width: $media-md) {
                     display: none;
                 }
             }
