--- a/src/blocks/modules/gallery/gallery.scss
+++ b/src/blocks/modules/gallery/gallery.scss
@@ -1,7 +1,7 @@
 .gallery {
     align-items: stretch;
     margin-bottom: 48px;
-    @media (max-width: 767px) {
+    @media (max-width: $media-md) {
         .row {
             margin-left: 0;
             margin-right: 0;
@@ -35,7 +35,7 @@
         .gallery__item {
             width: calc(33.3333% - 8px);
 
-            @media (max-width: 767px) {
+            @media (max-width: $media-md) {
                 margin-right: 16px;
                 margin-bottom: 16px;
                 width: calc(50% - 8px);
@@ -68,7 +68,7 @@
     }
 
     &--mosaic {
-        @media (max-width: 767px) {
+        @media (max-width: $media-md) {
             & > .row {
                 display: flex;
                 flex-wrap: wrap;
@@ -78,12 +78,12 @@
 
         .gallery__item {
             width: calc(66.6666% - 8px);
-            @media (max-width: 767px) {
+            @media (max-width: $media-md) {
                 width: 100%;
                 margin-bottom: 16px;
                 margin-right: inherit;
             }
-            @media (max-width: 767px) {
+            @media (max-width: $media-md) {
                 &:nth-child(3n) {
                     margin-right: inherit;
                 }
@@ -99,7 +99,7 @@
 
             &:nth-child(4n+2) {
                 width: calc(33.3333% - 8px);
-                @media (max-width: 767px) {
+                @media (max-width: $media-md) {
                     width: calc(50% - 8px);
                 }
                 .gallery__item-inner {
@@ -108,7 +108,7 @@
             }
             &:nth-child(4n+3) {
                 width: calc(33.3333% - 8px);
-                @media (max-width: 767px) {
+                @media (max-width: $media-md) {
                     width: calc(50% - 8px);
                 }
                 .gallery__item-inner {
