--- a/src/blocks/modules/galleryThumbs/galleryThumbs.scss
+++ b/src/blocks/modules/galleryThumbs/galleryThumbs.scss
@@ -26,7 +26,7 @@
 
         .thumbs-slider__nav {
             opacity: 1;
-            @media (max-width: 767px) {
+            @media (max-width: $media-md) {
                 opacity: 0;
                 pointer-events: none;
             }
@@ -35,7 +35,7 @@
         .thumbs-slider__zoom {
             top: 24px;
             opacity: 1;
-            @media (max-width: 767px) {
+            @media (max-width: $media-md) {
                 top: 20px;
                 right: 16px;
             }
@@ -75,7 +75,7 @@
         font-size: rem(14);
         line-height: 1.43;
         text-align: center;
-        @media (max-width: 767px) {
+        @media (max-width: $media-md) {
             top: 12px;
         }
     }
@@ -221,7 +221,7 @@
             font-size: rem(16);
             font-weight: $font-weight-bold;
             line-height: 1.5;
-            @media (max-width: 767px) {
+            @media (max-width: $media-md) {
                 width: 100%;
             }
         }
@@ -230,7 +230,7 @@
             width: 70%;
             font-size: rem(14);
             line-height: 1.43;
-            @media (max-width: 767px) {
+            @media (max-width: $media-md) {
                 width: 100%;
             }
         }
