--- a/src/blocks/modules/spoiler/spoiler.scss
+++ b/src/blocks/modules/spoiler/spoiler.scss
@@ -5,7 +5,7 @@
     width: 100%;
     border-top: 1px solid $border-10;
     margin-bottom: 60px;
-    @media (max-width: 767px) {
+    @media (max-width: $media-md) {
         margin-bottom: 28px;
     }
 
@@ -29,7 +29,7 @@
             color: $black;
             background: none;
             text-align: left;
-            @media (max-width: 767px) {
+            @media (max-width: $media-md) {
                 padding: 20px 40px 20px 0;
             }
             &:hover {
