--- a/src/blocks/modules/text-logo/text-logo.scss
+++ b/src/blocks/modules/text-logo/text-logo.scss
@@ -1,7 +1,7 @@
 .article-logo {
     display: flex;
     margin: 0 -16px 32px;
-    @media (max-width: 767px) {
+    @media (max-width: $media-md) {
         margin: 0 -8px 32px;
     }
 
@@ -15,7 +15,7 @@
         overflow: hidden;
         margin: 0 16px;
         border-radius: 5px;
-        @media (max-width: 767px) {
+        @media (max-width: $media-md) {
             margin: 0 8px;
         }
     }
