--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -90,7 +90,7 @@ h1 {
     font-size: rem(56);
     font-weight: 700;
     line-height: 1.14;
-    @media(max-width: 1023px) {
+    @media(max-width: $media-lg) {
         font-size: rem(40);
         line-height: 1.2;
     }
@@ -100,11 +100,11 @@ h2 {
     font-size: rem(40);
     font-weight: 700;
     line-height: 1.2;
-    @media (max-width: 1279px) {
+    @media (max-width: $media-xl) {
         font-size: rem(32);
         line-height: 1.25;
     }
-    @media (max-width: 1023px) {
+    @media (max-width: $media-lg) {
         font-size: rem(28);
         line-height: 1.29;
     }
@@ -123,7 +123,7 @@ h5 {
     font-size: rem(24);
     font-weight: 700;
     line-height: 1.33;
-    @media(max-width: 1023px) {
+    @media(max-width: $media-lg) {
         font-size: rem(20);
         line-height: 1.2;
     }
