--- a/src/styles/pages/profile.scss
+++ b/src/styles/pages/profile.scss
@@ -326,7 +326,7 @@
                     position: relative;
                     margin-right: 12px;
                     cursor: pointer;
-                    @media (max-width: 1279px) {
+                    @media (max-width: $media-xl) {
                         &:nth-child(n+7) {
                             display: none;
                         }
