--- a/src/styles/pages/results.scss
+++ b/src/styles/pages/results.scss
@@ -47,7 +47,7 @@
             width: 100%;
             border-top: 1px solid $border-10;
             padding: 25px 0 24px;
-            @media(max-width: 767px) {
+            @media(max-width: $media-md) {
                 padding: 17px 0 20px;
             }
         }
@@ -55,7 +55,7 @@
         &-photo {
             display: block;
             width: 104px;
-            @media(max-width: 767px) {
+            @media(max-width: $media-md) {
                 width: 56px;
             }
 
@@ -84,7 +84,7 @@
             padding-left: 16px;
             font-size: 0.875rem;
             line-height: 1.2;
-            @media(max-width: 767px) {
+            @media(max-width: $media-md) {
                 width: calc(100% - 56px);
 
                 br {
@@ -108,7 +108,7 @@
 
             &__position {
                 margin: 12px 0 8px;
-                @media(max-width: 767px) {
+                @media(max-width: $media-md) {
                     margin: 8px 0 4px;
                 }
             }
@@ -124,7 +124,7 @@
             align-items: flex-start;
             list-style: none;
             width: 43%;
-            @media(max-width: 767px) {
+            @media(max-width: $media-md) {
                 display: none;
             }
 
@@ -243,7 +243,7 @@
             border-top: 1px solid $border-10;
             padding: 25px 0 28px;
             color: $text-black;
-            @media (max-width: 767px) {
+            @media (max-width: $media-md) {
                 padding: 17px 0 20px;
             }
         }
@@ -282,7 +282,7 @@
 
         &-item {
             width: calc(50% - 12px);
-            @media(max-width: 767px) {
+            @media(max-width: $media-md) {
                 display: flex;
                 align-items: flex-start;
                 justify-content: space-between;
@@ -306,7 +306,7 @@
                 width: 100%;
                 border-radius: 5px;
                 overflow: hidden;
-                @media(max-width: 767px) {
+                @media(max-width: $media-md) {
                     width: calc(50% - 8px);
                 }
 
@@ -347,7 +347,7 @@
             }
 
             &__text {
-                @media(max-width: 767px) {
+                @media(max-width: $media-md) {
                     width: calc(50% - 8px);
                 }
             }
@@ -359,7 +359,7 @@
                 font-weight: 700;
                 color: $text-black;
                 margin: 8px 0;
-                @media(max-width: 767px) {
+                @media(max-width: $media-md) {
                     font-size: 1rem;
                     margin: 0 0 8px 0;
                 }
@@ -401,7 +401,7 @@
                             background-repeat: no-repeat;
                             background-position: center center;
                             transform: translate(-50%, -50%);
-                            @media(max-width: 767px) {
+                            @media(max-width: $media-md) {
                                 width: 40px;
                                 height: 40px;
                             }
@@ -418,7 +418,7 @@
                         padding: 4px 8px;
                         border-radius: 10px;
                         background: $text-black;
-                        @media(max-width: 767px) {
+                        @media(max-width: $media-md) {
                             right: 8px;
                             bottom: 8px;
                         }
@@ -449,7 +449,7 @@
         display: flex;
         justify-content: center;
         position: relative;
-        @media(max-width: 1023px) {
+        @media(max-width: $media-lg) {
             display: block;
         }
 
@@ -507,7 +507,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            @media(max-width: 1022px) {
+            @media(max-width: $media-lg) {
                 position: static;
                 margin: -8px;
                 padding: 8px;
@@ -572,7 +572,7 @@
                 .selects {
                     display: flex;
                     justify-content: space-between;
-                    @media(max-width: 1022px) {
+                    @media(max-width: $media-lg) {
                         justify-content: flex-start;
                     }
                     @media(max-width: 520px) {
@@ -602,7 +602,7 @@
 
         &__select {
             max-width: 204px;
-            @media(max-width: 1022px) {
+            @media(max-width: $media-lg) {
                 margin-right: 16px;
                 &:last-child {
                     margin-right: 0;
@@ -734,7 +734,7 @@
                 &__dropdown {
                     right: 0 !important;
                     left: auto !important;
-                    @media(max-width: 1022px) {
+                    @media(max-width: $media-lg) {
                         right: auto !important;
                         left: 0 !important;
                     }
@@ -754,7 +754,7 @@
 
             &--tag {
                 display: none;
-                @media(max-width: 1022px) {
+                @media(max-width: $media-lg) {
                     display: block;
                 }
             }
@@ -763,7 +763,7 @@
         &__links {
             display: flex;
             margin: 0 220px;
-            @media (max-width: 1022px) {
+            @media (max-width: $media-lg) {
                 width: calc(100% + 32px);
                 overflow: -moz-scrollbars-none;
                 margin: 32px 0 0 -16px;
@@ -821,7 +821,7 @@
 
         &__row {
             margin: 44px 0 26px;
-            @media(max-width: 1022px) {
+            @media(max-width: $media-lg) {
                 display: none;
             }
         }
